Changed the color system, added status and theme colors

--- a/src/base/_grid.html
+++ b/src/base/_grid.html
@@ -1,114 +1,114 @@
 <div class="sy-row sy-gap-0">
     <div class="sy-col-12">
-        <p class="sy-text-center sy-red-500">12</p>
+        <p class="sy-text-center sy-secondary">12</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-1">
-        <p class="sy-text-center sy-blue-500">1</p>
+        <p class="sy-text-center sy-primary">1</p>
     </div>
     <div class="sy-col-11">
-        <p class="sy-text-center sy-red-500">11</p>
+        <p class="sy-text-center sy-secondary">11</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-2">
-        <p class="sy-text-center sy-blue-500">2</p>
+        <p class="sy-text-center sy-primary">2</p>
     </div>
     <div class="sy-col-10">
-        <p class="sy-text-center sy-red-500">10</p>
+        <p class="sy-text-center sy-secondary">10</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-3">
-        <p class="sy-text-center sy-blue-500">3</p>
+        <p class="sy-text-center sy-primary">3</p>
     </div>
     <div class="sy-col-9">
-        <p class="sy-text-center sy-red-500">9</p>
+        <p class="sy-text-center sy-secondary">9</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-4">
-        <p class="sy-text-center sy-blue-500">4</p>
+        <p class="sy-text-center sy-primary">4</p>
     </div>
     <div class="sy-col-8">
-        <p class="sy-text-center sy-red-500">8</p>
+        <p class="sy-text-center sy-secondary">8</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-5">
-        <p class="sy-text-center sy-blue-500">5</p>
+        <p class="sy-text-center sy-primary">5</p>
     </div>
     <div class="sy-col-7">
-        <p class="sy-text-center sy-red-500">7</p>
+        <p class="sy-text-center sy-secondary">7</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-6">
-        <p class="sy-text-center sy-blue-500">6</p>
+        <p class="sy-text-center sy-primary">6</p>
     </div>
     <div class="sy-col-6">
-        <p class="sy-text-center sy-red-500">6</p>
+        <p class="sy-text-center sy-secondary">6</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-7">
-        <p class="sy-text-center sy-blue-500">7</p>
+        <p class="sy-text-center sy-primary">7</p>
     </div>
     <div class="sy-col-5">
-        <p class="sy-text-center sy-red-500">5</p>
+        <p class="sy-text-center sy-secondary">5</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-8">
-        <p class="sy-text-center sy-blue-500">8</p>
+        <p class="sy-text-center sy-primary">8</p>
     </div>
     <div class="sy-col-4">
-        <p class="sy-text-center sy-red-500">4</p>
+        <p class="sy-text-center sy-secondary">4</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-9">
-        <p class="sy-text-center sy-blue-500">9</p>
+        <p class="sy-text-center sy-primary">9</p>
     </div>
     <div class="sy-col-3">
-        <p class="sy-text-center sy-red-500">3</p>
+        <p class="sy-text-center sy-secondary">3</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-10">
-        <p class="sy-text-center sy-blue-500">10</p>
+        <p class="sy-text-center sy-primary">10</p>
     </div>
     <div class="sy-col-2">
-        <p class="sy-text-center sy-red-500">2</p>
+        <p class="sy-text-center sy-secondary">2</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-11">
-        <p class="sy-text-center sy-blue-500">11</p>
+        <p class="sy-text-center sy-primary">11</p>
     </div>
     <div class="sy-col-1">
-        <p class="sy-text-center sy-red-500">1</p>
+        <p class="sy-text-center sy-secondary">1</p>
     </div>
 </div>
 <div class="sy-row sy-gap-0">
     <div class="sy-col-12">
-        <p class="sy-text-center sy-blue-500">12</p>
+        <p class="sy-text-center sy-primary">12</p>
     </div>
 </div>
 
 
 <div class="sy-row sy-mt-5 sy-gap-5">
     <div class="sy-col-3">
-        <p class="sy-text-center sy-blue-500">Column</p>
+        <p class="sy-text-center sy-primary">Column</p>
     </div>
     <div class="sy-col-3">
-        <p class="sy-text-center sy-blue-500">Column</p>
+        <p class="sy-text-center sy-primary">Column</p>
     </div>
     <div class="sy-col-3">
-        <p class="sy-text-center sy-blue-500">Column</p>
+        <p class="sy-text-center sy-primary">Column</p>
     </div>
     <div class="sy-col-3">
-        <p class="sy-text-center sy-blue-500">Column</p>
+        <p class="sy-text-center sy-primary">Column</p>
     </div>
 </div>
