--- a/src/base/_typography.html
+++ b/src/base/_typography.html
@@ -1,34 +1,34 @@
 <div class="sy-row sy-gap-2">
     <div class="sy-col">
-        <p class="sy-text-start sy-blue-500">Start</p>
+        <p class="sy-text-start sy-primary">Start</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-center sy-blue-500">Center</p>
+        <p class="sy-text-center sy-primary">Center</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-end sy-blue-500">End</p>
+        <p class="sy-text-end sy-primary">End</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-justify sy-blue-500">Justify</p>
+        <p class="sy-text-justify sy-primary">Justify</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-justify-all sy-blue-500">Justify-all</p>
+        <p class="sy-text-justify-all sy-primary">Justify-all</p>
     </div>
 </div>
 <div class="sy-row sy-gap-2 sy-rtl">
     <div class="sy-col">
-        <p class="sy-text-start sy-red-500">Start RTL</p>
+        <p class="sy-text-start sy-secondary">Start RTL</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-center sy-red-500">Center RTL</p>
+        <p class="sy-text-center sy-secondary">Center RTL</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-end sy-red-500">End RTL</p>
+        <p class="sy-text-end sy-secondary">End RTL</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-justify sy-red-500">Justify RTL</p>
+        <p class="sy-text-justify sy-secondary">Justify RTL</p>
     </div>
     <div class="sy-col">
-        <p class="sy-text-justify-all sy-red-500">Justify-all RTL</p>
+        <p class="sy-text-justify-all sy-secondary">Justify-all RTL</p>
     </div>
 </div>
